--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-utils": "^0.14.0",
     "redux": "^5.0.1",
     "sass": "^1.77.8",
     "typescript": "^4.9.5",
@@ -33,6 +35,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:css": "postcss ./src/index.css -o dist/output.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -55,6 +58,12 @@
     ]
   },
   "devDependencies": {
-    "file-loader": "^6.2.0"
+    "@types/react-swipeable-views": "^0.13.5",
+    "@types/react-swipeable-views-utils": "^0.13.7",
+    "autoprefixer": "^10.4.20",
+    "file-loader": "^6.2.0",
+    "postcss": "^8.4.41",
+    "postcss-cli": "^11.0.0",
+    "tailwindcss": "^3.4.10"
   }
 }
