--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-swipeable-views-utils": "^0.14.0",
     "redux": "^5.0.1",
     "sass": "^1.77.8",
+    "swiper": "^11.1.15",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
